<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:weightSum="10">

    <!-- Nombre del producto -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_header_producto"
        android:textStyle="bold"
        android:layout_weight="4"/>

    <!-- Cantidad -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_header_cantidad"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="2"/>

    <!-- Precio -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_header_precio"
        android:textStyle="bold"
        android:layout_weight="3"/>

    <!-- Monto -->
<!--    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Importe"
        android:textStyle="bold"
        android:gravity="end"
        android:layout_weight="1" />-->
</LinearLayout>