<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/main_button_size"
            android:layout_height="@dimen/main_button_size"
            android:contentDescription="Logo"
            android:src="@drawable/idol_logo_medium"
            android:layout_marginEnd="35dp" />

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/main_header_size"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="@id/ivLogo"
            app:layout_constraintBottom_toBottomOf="@id/ivLogo" />

    </LinearLayout>

    <!-- 📌 Texto en Coreano -->
    <TextView
        android:id="@+id/tvKorean"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="아이돌 카페"
        android:textSize="@dimen/main_korean_text_size"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 📌 GridLayout para los botones -->
    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/main_margin_medium"
        app:columnCount="2"
        app:rowCount="3"
        app:layout_constraintTop_toBottomOf="@id/tvKorean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.75">

        <!-- 🔹 Botón 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/main_card_margin"
            app:cardCornerRadius="@dimen/main_card_corner_radius"
            app:cardElevation="@dimen/main_card_elevation"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btn1"
                    android:layout_width="@dimen/main_button_size"
                    android:layout_height="@dimen/main_button_size"
                    android:scaleType="fitCenter"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/first_menu_item_text"
                    android:src="@drawable/coffee_cup"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_menu_item_text"
                    android:textSize="@dimen/main_menu_text_size"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_menu_item_subtext"
                    android:textSize="@dimen/main_menu_subtext_size"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- 🔹 Botón 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/main_card_margin"
            app:cardCornerRadius="@dimen/main_card_corner_radius"
            app:cardElevation="@dimen/main_card_elevation"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btn2"
                    android:layout_width="@dimen/main_button_size"
                    android:layout_height="@dimen/main_button_size"
                    android:scaleType="fitCenter"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/second_menu_item_text"
                    android:src="@drawable/frio"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_menu_item_text"
                    android:textSize="@dimen/main_menu_text_size"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_menu_item_subtext"
                    android:textSize="@dimen/main_menu_subtext_size"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- 🔹 Botón 3 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/main_card_margin"
            app:cardCornerRadius="@dimen/main_card_corner_radius"
            app:cardElevation="@dimen/main_card_elevation"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btn3"
                    android:layout_width="@dimen/main_button_size"
                    android:layout_height="@dimen/main_button_size"
                    android:scaleType="fitCenter"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/third_menu_item_text"
                    android:src="@drawable/bakery"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_menu_item_text"
                    android:textSize="@dimen/main_menu_text_size"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_menu_item_subtext"
                    android:textSize="@dimen/main_menu_subtext_size"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- 🔹 Botón 4 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/main_card_margin"
            app:cardCornerRadius="@dimen/main_card_corner_radius"
            app:cardElevation="@dimen/main_card_elevation"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btn4"
                    android:layout_width="@dimen/main_button_size"
                    android:layout_height="@dimen/main_button_size"
                    android:scaleType="fitCenter"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/fourth_menu_item_text"
                    android:src="@drawable/cervezas"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_menu_item_text"
                    android:textSize="@dimen/main_menu_text_size"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_menu_item_subtext"
                    android:textSize="@dimen/main_menu_subtext_size"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- 🔹 Botón 5 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/main_card_margin"
            app:cardCornerRadius="@dimen/main_card_corner_radius"
            app:cardElevation="@dimen/main_card_elevation"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btn5"
                    android:layout_width="@dimen/main_button_size"
                    android:layout_height="@dimen/main_button_size"
                    android:scaleType="fitCenter"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/fourth_menu_item_text"
                    android:src="@drawable/sandwich64"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifth_menu_item_text"
                    android:textSize="@dimen/main_menu_text_size"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifth_menu_item_subtext"
                    android:textSize="@dimen/main_menu_subtext_size"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- 🔹 Botón 6 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/main_card_margin"
            app:cardCornerRadius="@dimen/main_card_corner_radius"
            app:cardElevation="@dimen/main_card_elevation"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btn6"
                    android:layout_width="@dimen/main_button_size"
                    android:layout_height="@dimen/main_button_size"
                    android:scaleType="fitCenter"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/fourth_menu_item_text"
                    android:src="@drawable/postre"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sixth_menu_item_text"
                    android:textSize="@dimen/main_menu_text_size"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sixth_menu_item_subtext"
                    android:textSize="@dimen/main_menu_subtext_size"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>